# Deep_learning_d415_ROS2

./: .gitignore  .gitmodules  Lab2.docx.md  README.md  open_video_hrc.sh  run.sh  run_cpu.sh  run_gpu.sh
Docker/CPU/: Dockerfile.cpu  build_cpu.sh  docker-entrypoint.sh
Docker/GPU/: Dockerfile  Dockerfile.gpu  Dockerfile2  build.sh  build_gpu.sh  run.sh
Learning_Notes/: DockerImage.md  Tools.md
Outputs/rosbags/test/0001/: metadata.yaml
Outputs/rosbags/test/0002/: metadata.yaml
Outputs/rosbags/test/0003/: metadata.yaml
Outputs/rosbags/test/0004/: metadata.yaml
Outputs/rosbags/test/0005/: metadata.yaml
Outputs/rosbags/test/0006/: metadata.yaml
Outputs/rosbags/test/0007/: metadata.yaml
Outputs/rosbags/test/0008/: metadata.yaml
Outputs/rosbags/test/0009/: metadata.yaml
Outputs/rosbags/test/0010/: metadata.yaml
Outputs/rosbags/test/0011/: metadata.yaml
Outputs/rosbags/test/0012/: metadata.yaml
Outputs/rosbags/test/0013/: metadata.yaml
Script/: bag2mp4.py  record.py
Script/config/: bags2mp4.yaml  record.yaml
Tutorial/: DockerImage.md  Setup.md  maskrcnn.md
Tutorial/lab1/: README.md
Tutorial/lab2/: README.md
ros2_ws/src/bag_recorder/: package.xml  setup.py
ros2_ws/src/bag_recorder/bag_recorder/: recorder_node.py  recorder_ui.py
ros2_ws/src/bag_recorder/config/: bag_recorder.yaml
ros2_ws/src/camera_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/camera_ros/config/: global_settings.yaml
ros2_ws/src/camera_ros/launch/: rs_launch.py
ros2_ws/src/detection/: package.xml  setup.py
(+6 files in other folders)
